fixed spacing on form, added coloring of active links in navbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -61,6 +61,9 @@
 .navbar-links a:hover {
     color: #fcb532;
 }
+.navbar-links a.active {
+    color: #fcb532; /* or any color you prefer for the active link */
+}
 
 .cstack-header {
     position: relative;
